feat: Implement Axios client with interceptors for token management and error handling
feat: Add Excel export service for financial reports including Income/Expense, Balance Sheet, and Dividend distribution

feat: Integrate Gemini AI service for generating financial advice based on user prompts and context

chore: Configure TypeScript settings for improved development experience

feat: Define types for user roles, loans, transactions, and other entities for better type safety

chore: Set up Vite configuration with API proxy and environment variable handling